--- a/index.html
+++ b/index.html
@@ -30,5 +30,120 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <div class="hero__block">
+                    <div class="hero__img">
+                    <img src="./img/hero_main.png" alt="">
+                </div>
+                <div class="hero__content">
+                    <h1 class="hero__title">Humanizing your insurance.</h1>
+                    <p class="hero__text">Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that’s right for you. Ensure you and your loved ones are protected.</p>
+                    <button class="hero__btn">VIEW PLANS</button>
+                </div>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container">
+                <h2 class="about__title">We’re different</h2>
+                <ul class="about__list">
+                    <li class="about__item">
+                        <img src="./img/about_logo1.svg" alt="">
+                        <h3 class="about__subtitle">Snappy Process</h3>
+                        <p class="about__text">Our application process can be completed in minutes, not hours. Don’t get stuck filling in tedious forms.</p>
+                    </li>
+                    <li class="about__item">
+                        <img src="./img/about_logo2.svg" alt="">
+                        <h3 class="about__subtitle">Affordable Prices</h3>
+                        <p class="about__text">We don’t want you worrying about high monthly costs. Our prices may be low, but we still offer the best coverage possible.</p>
+                    </li>
+                    <li class="about__item">
+                        <img src="./img/about_logo3.svg" alt="">
+                        <h3 class="about__subtitle">People First</h3>
+                        <p class="about__text">Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="find">
+            <div class="container">
+                <div class="find__content">
+                    <h2 class="find__title">Find out more about how we work</h2>
+                    <button class="find__btn">HOW WE WORK</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__top">
+               <div class="top__block">
+                 <a href="#" class="footer__top_link">
+                    <img src="./img/header_logo.svg" alt="">
+                </a>
+               </div>
+               <ul class="footer__top_list">
+                <li>
+                    <a href="#" class="footer__top_link">
+                        <img src="./img/facebook.svg" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__top_link">
+                        <img src="./img/twitter.svg" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__top_link">
+                        <img src="./img/privtae.svg" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__top_link">
+                        <img src="./img/instagram.svg" alt="">
+                    </a>
+                </li>
+               </ul>
+            </div>
+            <div class="footer-container">
+            <div class="footer-column">
+                <h3>OUR COMPANY</h3>
+                <ul>
+                    <li><a href="#">HOW WE WORK</a></li>
+                    <li><a href="#">WHY INSURE?</a></li>
+                    <li><a href="#">VIEW PLANS</a></li>
+                    <li><a href="#">REVIEWS</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>HELP ME</h3>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">TERMS OF USE</a></li>
+                    <li><a href="#">PRIVACY POLICY</a></li>
+                    <li><a href="#">COOKIES</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>CONTACT</h3>
+                <ul>
+                    <li><a href="#">SALES</a></li>
+                    <li><a href="#">SUPPORT</a></li>
+                    <li><a href="#">LIVE CHAT</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>OTHERS</h3>
+                <ul>
+                    <li><a href="#">CAREERS</a></li>
+                    <li><a href="#">PRESS</a></li>
+                    <li><a href="#">LICENSES</a></li>
+                </ul>
+            </div>
+        </div>
+        </div>
+    </footer>
 </body>
 </html>
